dashboard_temp/statics/css/style.css
html {
    line-height: 1.15;
    -webkit-text-size-adjust: 100%;
    -webkit-tap-highlight-color: transparent;
    transition: color .3s ease;
    font-weight: 300;
    font-family: 'Poppins', sans-serif;
    color:  #74788d;
}
input, textarea, button, a, {
    font-family: inherit;
    color:  #74788d;
}


.col-md-4, .col-md-8 {
	display: table-cell;
    max-height: 100%;
    padding-top: 10px;
}

.body-col {
	border-radius: 5px;
	margin: 5px 5px 5px 0;
	background-color: white;
	width: 100%;
    max-width: 100%;
	height: 100%;
    overflow: hidden;
    webkit-box-shadow: 0 1px 15px 1px rgba(69,65,78,.06);
    box-shadow: 0 1px 15px 1px rgba(69,65,78,.06);
}
.col2x {
    margin-bottom:-5px;

}

.body-col2{
    margin-top: 5px;
    margin-left: 5px;
    width: 100%;
    height: 100%;
    background-color: #F1F2F7;
}

.body-row {
	display: table;
	width: 100%;
}

.row {
    margin: auto !important;
    padding-top: 15px;
}

.wrapper {
    display: flex;
    width: 100%;
    align-items: stretch;
}
#sidebar {
    min-width: 250px;
    max-width: 250px;
    min-height: 100vh;
}


a[data-toggle="collapse"] {
    position: relative;
}

.sidebar-dropdown::after {
    display: block;
    position: absolute;
    top: 50%;
    right: 20px;
    transform: translateY(-50%);
}

#sidebar ul{
     position: sticky;
    top: 0;
}



/* Shrinking the sidebar from 250px to 80px and center aligining its content*/
#sidebar.active {
    min-width: 80px;
    max-width: 80px;
    text-align: center;
}


/* Toggling the sidebar header content, hide the big heading [h3] and showing the small heading [strong] and vice versa*/
#sidebar .sidebar-header strong {
    display: none;
}
#sidebar.active .sidebar-header h3 {
    display: none;
}
#sidebar.active .sidebar-header strong {
    display: block;
}

#sidebar ul li a {
    text-align: left;
}

#sidebar.active ul li a {
    padding: 20px 10px;
    text-align: center !important;
    font-size: 0.85em;
}


#sidebar.active > .sidebar-header {
    justify-content: center;
}

#sidebar.active ul li a i {
    margin-right:  0;
    display: block;
    font-size: 1.8em;
    margin-bottom: 5px;
}

#sidebar.active span{
    display: none;
}

.side-drop-toggler{
    float: right;
}

.button_fadeUp {
  -webkit-transform:rotate(90deg);
  -webkit-transition-duration: 0.5s;
}

/* Same dropdown links padding*/
#sidebar.active ul ul a {
    padding: 10px !important;
}

/* Changing the arrow position to bottom center position, 
   translateX(50%) works with right: 50% 
   to accurately  center the arrow */
#sidebar.active .dropdown-toggle::after {
    top: auto;
    bottom: 10px;
    right: 50%;
    -webkit-transform: translateX(50%);
    -ms-transform: translateX(50%);
    transform: translateX(50%);
}

.active_item {
    display: none;
    transition: all 0.3s;
}



/*
    ADDITIONAL DEMO STYLE, NOT IMPORTANT TO MAKE THINGS WORK BUT TO MAKE IT A BIT NICER :)
*/


#sidebar {
    background: #1E1E2D;
    color: #fff;
    transition: all 0.3s;

}


.sidebar-header {
    display: flex;
    padding: 0.5em;
    background: #1A1A27;
    justify-content: space-between;
}

#sidebar ul.components {
    padding: 20px 0;
    border-bottom: 1px solid #47748b;
}

#sidebar ul p {
    color: #fff;
    padding: 10px;
}

#sidebar ul li a {
    padding: 10px;
    font-size: 1.0rem;
    display: block;
    color:  #7386D5;
    font-family: 'Poppins', sans-serif;
}

#sidebar li {
    
}
#sidebar ul li a:hover {
    color:#FFF;
    background-color: #1b1b28;
    text-decoration: none;
}

#sidebar ul li.active > a, a[aria-expanded="true"] {
    color: #fff;
    background: #1E1E2D;
}

.navbar {
    position: sticky;
    position: -webkit-sticky;
    top:0 !important;
}

.navbar2 {
  width: 100%;
  background-color: #FFF;
}

.navbar2 a {
    float: left;
    color: #6c7293;
}

.navbar2 .calendar{
    float: right;
}

.navbar-toggler {
    background-color: none!important;
    color: #FFF !important;
}

.nav-resp {
    width: 100%;
    display: none;

}

.navbar button {
    float: right;
}

.chart-container {
    width: 100% !important;
    background: #1F2A49;
    overflow: hidden;
}

.chart-container canvas {
    width: 105% !important;
    margin-left: -13px;
    margin-bottom: -13px;
}

.chart-container2 {
    overflow: hidden;
    width: 100% !important;
    height: auto;
    background: #f2f2f2;
    border-radius: 5px;
    webkit-box-shadow: 0 1px 15px 1px rgba(69,65,78,.06);
    box-shadow: 0 1px 15px 1px rgba(69,65,78,.06);
    margin-bottom:10px;
}

.chart-container2 canvas{
    width: 105% !important;
    margin-left: -13px;
    margin-bottom: -13px;
}

.chart-container3 canvas{
    width: 105% !important;
    margin-left: -13px;
    margin-bottom: -13px;
}

.chart-container3 {
    overflow:hidden;
    width: 100% !important;
    height: auto;
    background: #f2f2f2;
    border-radius: 5px;
    webkit-box-shadow: 0 1px 15px 1px rgba(69,65,78,.06);
    box-shadow: 0 1px 15px 1px rgba(69,65,78,.06);
    margin-top: 5px;

}




.chart2 {
    margin-left: -6px;
    width: 100%; 
}

.chart3 {
    margin-left: -6px;
    width: 100%; 
}



.toggle-btn-active {
    background-color: white;
    color: black;
    border-color: transparent;
}

.chart-toggle button{
    background-color: #4298c3;
    border-color: transparent;
    color: white;
    border-radius: 5px;
    float: right;
}

.chart-toggle button:hover {
    background-color: white;
    color: black;
    border-color: transparent;
}

.chart-toggle p {
float: left;
}



.chart-widget-boxes{
    margin: -4.3rem auto 0 auto;
    position: relative;
    width: 90%;
}

.widget-box{
margin: 6px;
 padding: 24px 24px 24px 6px;
    -webkit-box-flex: 1;
    -ms-flex: 1;
    flex: 1;
    overflow: hidden;
    background-color: #fff;
    margin: .3rem;
    -webkit-box-shadow: 0 1px 15px 1px rgba(69,65,78,.06);
    box-shadow: 0 1px 15px 1px rgba(69,65,78,.06);
    cursor: pointer;
    -webkit-transition: all .3s ease;
    transition: all .3s ease;
}
/* ... */

